--- a/be/src/theme/common/color.scss
+++ b/be/src/theme/common/color.scss
@@ -9,3 +9,7 @@ $font: #606266;
 
 $border: rgb(233, 234, 236);
 $bg: #2d3a4b;
+
+$screen-sm-min: 768px;
+$screen-md-min: 992px;
+$screen-lg-min: 1200px;
