--- a/be/src/theme/component/container.scss
+++ b/be/src/theme/component/container.scss
@@ -4,17 +4,19 @@
 @include b(container) {
   position: relative;
   box-sizing: border-box;
+  min-width: 768px;
   height: 100%;
   padding-left: 180px;
 
   transition: padding ease .3s;
+  @include clear;
 
   @include when(fullscreen) {
     padding-left: 45px;
   }
 
   @include e(aside) {
-    display: inline-flex;
+    float: left;
     box-sizing: border-box;
     width: 180px;
     height: 100%;
@@ -34,15 +36,17 @@
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-
+    float: right;
     flex-direction: column;
-    @include flexLayout(flex-start, inline-flex);
+    @include flexLayout(flex-start);
 
     header {
+      width: 100%;
       // box-shadow: 0 1px 5px rgba(0,0,0,.2), 0 2px 2px rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12);
     }
 
     main {
+      width: 100%;
       box-sizing: border-box;
       padding: 15px;
       flex: 1;
@@ -51,8 +55,7 @@
       // @include flexLayout();
 
       > div {
-        height: 100%;
-        box-sizing: border-box;
+        min-height: 100%;
       }
     }
   }
