--- a/be/src/theme/component/header.scss
+++ b/be/src/theme/component/header.scss
@@ -18,7 +18,14 @@
 
   > div {
     align-items: stretch;
-    @include flexLayout(center, inline-flex);
+
+    &:first-of-type {
+      @include flexLayout(flex-start);
+    }
+
+    &:last-of-type {
+      @include flexLayout(flex-end);
+    }
 
     &:first-of-type span {
       font-size: .8em;
