--- a/be/src/views/login/style.scss
+++ b/be/src/views/login/style.scss
@@ -56,6 +56,10 @@
         width: 100%;
       }
 
+      input.is-invalid {
+        border-color: $danger;
+      }
+
       p {
         position: absolute;
         text-align: left;
