--- a/be/src/theme/component/button.scss
+++ b/be/src/theme/component/button.scss
@@ -7,7 +7,7 @@
 
   background-color: #fff;
   border: 1px solid $border;
-  border-radius: 4px;
+  border-radius: 2px;
   outline: none;
 
   color: $font;
@@ -69,7 +69,7 @@
 
     &:hover,
     &:focus, {
-      background-color: #66b1ff;
+      background-color: #0371df;
       border-color: #66b1ff;
       color: #fff;
     }
