--- a/be/src/theme/component/input.scss
+++ b/be/src/theme/component/input.scss
@@ -2,8 +2,8 @@
   display: inline-block;
   box-sizing: border-box;
   // width: 100%;
-  height: 40px;
-  padding: 5px 12px;
+  // height: 40px;
+  padding: 8px 12px;
 
   font-size: inherit;
   line-height: 1;
