--- a/be/src/theme/component/collapse.scss
+++ b/be/src/theme/component/collapse.scss
@@ -1,6 +1,6 @@
 @include b(collapse) {
+  box-sizing: border-box;
   height: 48px;
-  padding: 0 15px;
   background: #fff;
   overflow: hidden;
   border-bottom: 1px solid $border;
@@ -13,6 +13,8 @@
   }
 
   @include e(header) {
+    box-sizing: border-box;
+    padding: 0 5px;
     line-height: 48px;
     @include flexLayout(space-between);
 
@@ -20,17 +22,10 @@
       @include textOverflow;
     }
 
-    span {
+    > div {
+      flex: 1;
       @include flexLayout(flex-start) {
         align-items: center;
-      }
-
-      &:first-of-type {
-        flex: 1;
-      }
-
-      > * {
-        width: 100%;
       }
     }
 
