--- a/be/src/views/login/style.scss
+++ b/be/src/views/login/style.scss
@@ -5,7 +5,8 @@
 
   width: 100vw;
   height: 100vh;
-  background-color: $bg;
+
+  background: linear-gradient(to bottom right, #328BD5, #2d3a4b);
 
   @include flexLayout(center) {
     align-items: center;
@@ -19,6 +20,33 @@
     border-radius: 5px;
     margin: 0 auto;
 
+    /deep/ input {
+      border-color: #fff !important;
+      background-color: rgba(255, 255, 255, .2);
+      color: #fff;
+
+      &:focus {
+        background: #fff;
+        color: #333;
+      }
+    }
+
+    /deep/ input::-webkit-input-placeholder { 
+      color: #fff;
+    }
+
+    /deep/ input:-moz-placeholder {
+      color: #fff;
+    }
+
+    /deep/ input::-moz-placeholder {
+      color: #fff;
+    }
+
+    /deep/ input:-ms-input-placeholder {
+      color: #fff;
+    }
+
     h1 {
       font-size: 26px;
       color: #fff;
@@ -29,6 +57,7 @@
     .btn-login {
       width: 100%;
       margin-top: 22px;
+      color: $primary;
     }
 
     .register {
@@ -71,6 +100,118 @@
         font-size: 12px;
         left: 2px;
       }
+    }
+  }
+}
+
+@include b(bubbles) {
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+
+  li {
+    position: absolute;
+    bottom: -160px;
+    width: 40px;
+    height: 40px;
+    background: rgba(255, 255, 255, .15);
+    list-style: none;
+    animation: square 15s infinite linear;
+
+    &:nth-of-type(1) {
+      left: 10%;
+    }
+
+    &:nth-of-type(2) {
+      left: 20%;
+      width: 90px;
+      height: 90px;
+      animation-delay: 2s;
+      animation-duration: 7s;
+    }
+
+    &:nth-of-type(3) {
+      left: 30%;
+      animation-delay: 4s;
+    }
+
+    &:nth-of-type(4) {
+      left: 40%;
+      width: 60px;
+      height: 60px;
+      animation-duration: 8s;
+      background: rgba(255, 255, 255, .3)
+    }
+
+    &:nth-of-type(5) {
+      left: 70%;
+    }
+
+    &:nth-of-type(6) {
+      left: 80%;
+      width: 120px;
+      height: 120px;
+      animation-delay: 3s;
+      background: rgba(255, 255, 255, .2);
+    }
+
+
+    &:nth-of-type(7) {
+      left: 32%;
+      width: 160px;
+      height: 160px;
+      animation-delay: 2s;
+    }
+
+    &:nth-of-type(8) {
+      left: 55%;
+      width: 20px;
+      height: 20px;
+      animation-delay: 4s;
+      animation-duration: 15s;
+    }
+
+    &:nth-of-type(9) {
+      left: 25%;
+      width: 10px;
+      height: 10px;
+      animation-delay: 2s;
+      animation-duration: 12s;
+      background: rgba(255, 255, 255, .3);
+    }
+
+    &:nth-of-type(10) {
+      left: 85%;
+      width: 60px;
+      height: 60px;
+      animation-delay: 5s;
+    }
+  }
+
+
+  @keyframes square {
+    0% {
+      opacity: .5;
+      transform: translateY(0) rotate(45deg);
+    }
+
+    25% {
+      opacity: .75;
+      transform: translateY(-400px) rotate(90deg);
+    }
+
+    50% {
+      opacity: 1;
+      transform: translateY(-600px) rotate(135deg);
+    }
+
+    100% {
+      opacity: 0;
+      transform: translateY(-1000px) rotate(180deg);
     }
   }
 }
