--- a/be/src/views/register/style.scss
+++ b/be/src/views/register/style.scss
@@ -1,10 +1,11 @@
 @include b(register) {
-  position: relative;
-  box-sizing: border-box;
+  position: fixed;
+  left: 0;
+  top: 0;
+
   width: 100vw;
   height: 100vh;
-  padding: 40px 0;
-  background-color: $bg;
+  background: linear-gradient(to bottom right, #328BD5, #2d3a4b);
 
   @include flexLayout(center) {
     align-items: center;
@@ -22,31 +23,64 @@
     margin: 40px auto 0;
     
     .panel {
-      background: #fff;
       padding: 40px 45px;
       text-align: center;
 
       h2 {
-        border-bottom: 1px solid $border;
+        // border-bottom: 1px solid $border;
         margin: 0;
         font-size: 24px;
         text-align: left;
-        color: #333;
-        padding-bottom: 10px;
+        color: #fff;
+        // padding-bottom: 10px;
         font-weight: 400;
+        text-align: center;
   
-        .ta-icon {
-          color: $primary;
+        // .ta-icon {
+        //   color: $primary;
+        // }
+      }
+
+      /deep/ input {
+        border-color: #fff !important;
+        background-color: rgba(255, 255, 255, .1);
+        color: #fff;
+  
+        &:focus {
+          background: #fff;
+          color: #333;
         }
+
+        @include placeholder {
+          color: #fff !important;
+        }
+      }
+
+      /deep/ input::-webkit-input-placeholder { 
+        color: #fff;
+      }
+  
+      /deep/ input:-moz-placeholder {
+        color: #fff;
+      }
+  
+      /deep/ input::-moz-placeholder {
+        color: #fff;
+      }
+  
+      /deep/ input:-ms-input-placeholder {
+        color: #fff;
       }
     }
 
     .other {
-      margin-top: 20px;
-      text-align: center;
+      margin-top: 22px;
+      text-align: right;
+      color: #999;
+      font-size: 14px;
 
       a {
-        color: $primary;
+        color: #fff;
 
         &:hover {
           text-decoration: underline;
@@ -63,6 +97,7 @@
     button {
       margin-top: 22px;
       width: 100%;
+      color: $primary;
     }
   }
 }
@@ -76,3 +111,130 @@
     margin-left: 10px;
   }
 }
+
+@include b(bubbles) {
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+
+  li {
+    position: absolute;
+    bottom: -160px;
+    width: 40px;
+    height: 40px;
+    background: rgba(255, 255, 255, .15);
+    list-style: none;
+    animation: square 15s infinite linear;
+
+    &:nth-of-type(1) {
+      left: 10%;
+    }
+
+    &:nth-of-type(2) {
+      left: 20%;
+      width: 90px;
+      height: 90px;
+      animation-delay: 2s;
+      animation-duration: 7s;
+    }
+
+    &:nth-of-type(3) {
+      left: 30%;
+      animation-delay: 4s;
+    }
+
+    &:nth-of-type(4) {
+      left: 40%;
+      width: 60px;
+      height: 60px;
+      animation-duration: 8s;
+      background: rgba(255, 255, 255, .3)
+    }
+
+    &:nth-of-type(5) {
+      left: 70%;
+    }
+
+    &:nth-of-type(6) {
+      left: 80%;
+      width: 120px;
+      height: 120px;
+      animation-delay: 3s;
+      background: rgba(255, 255, 255, .2);
+    }
+
+
+    &:nth-of-type(7) {
+      left: 32%;
+      width: 160px;
+      height: 160px;
+      animation-delay: 2s;
+    }
+
+    &:nth-of-type(8) {
+      left: 55%;
+      width: 20px;
+      height: 20px;
+      animation-delay: 4s;
+      animation-duration: 15s;
+    }
+
+    &:nth-of-type(9) {
+      left: 25%;
+      width: 10px;
+      height: 10px;
+      animation-delay: 2s;
+      animation-duration: 12s;
+      background: rgba(255, 255, 255, .3);
+    }
+
+    &:nth-of-type(10) {
+      left: 85%;
+      width: 60px;
+      height: 60px;
+      animation-delay: 5s;
+    }
+  }
+
+
+  @keyframes square {
+    0% {
+      opacity: .5;
+      transform: translateY(0) rotate(45deg);
+    }
+
+    25% {
+      opacity: .75;
+      transform: translateY(-400px) rotate(90deg);
+    }
+
+    50% {
+      opacity: 1;
+      transform: translateY(-600px) rotate(135deg);
+    }
+
+    100% {
+      opacity: 0;
+      transform: translateY(-1000px) rotate(180deg);
+    }
+  }
+}
+
+
+
+  // ::-webkit-input-placeholder { /* WebKit browsers*/ 
+  // 　　color:rgb(223, 33, 33);
+  // }
+  // :-moz-placeholder {  /* Mozilla Firefox 4 to 18*/ 
+  // 　　color:rgb(223, 33, 33);
+  // }
+  // ::-moz-placeholder {  /* Mozilla Firefox 19+*/ 
+  // 　　color:rgb(223, 33, 33);
+  // }
+  // :-ms-input-placeholder { /* Internet Explorer 10+*/ 
+  // 　　color:rgb(223, 33, 33);
+  // }
