--- a/be/src/views/article/style.scss
+++ b/be/src/views/article/style.scss
@@ -145,6 +145,7 @@
     border: 1px solid $border;
     border-radius: 5px;
     padding: 5px  0;
+    overflow: auto;
 
     .tag {
       box-sizing: border-box;
