--- a/fe/components/common/styles/header.scss
+++ b/fe/components/common/styles/header.scss
@@ -15,6 +15,7 @@
     height: 5rem;
     color: #909090;
     border-bottom: 1px solid $border;
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,.05);
     background: #fff;
   }
 
