--- a/fe/components/post/styles/nav.scss
+++ b/fe/components/post/styles/nav.scss
@@ -1,14 +1,8 @@
 @import '../../../theme/global.scss';
 
 @include b(nav) {
-  position: fixed;
-  left: 0;
-  top: 5rem;
-  z-index: 250;
-
   width: 100%;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,.05);
-  background: #fff;
+  padding: 1rem 0;
 
   font-size: px2rem(14);
   color: #71777c;
