--- a/fe/components/common/styles/header.scss
+++ b/fe/components/common/styles/header.scss
@@ -14,8 +14,7 @@
     transition: all .2s;
     height: 5rem;
     color: #909090;
-    border-bottom: 1px solid $border;
-    box-shadow: 0 1px 2px 0 rgba(0,0,0,.05);
+    border-bottom: 1px solid #e7e7e7;
     background: #fff;
   }
 
@@ -33,6 +32,9 @@
 
   @include e(logo) {
     margin-right: 2rem;
+    color: $primary;
+    font-weight: 600;
+    font-size: 1.6rem;
   }
 
   @include e(menu) {
@@ -45,6 +47,10 @@
   
     display: inline-flex;
     align-items: center;
+
+    @include when(active) {
+      color: $primary;
+    }
 
     a {
       display: block;
@@ -61,6 +67,12 @@
 
     button {
       margin-left: 1rem;
+    }
+  }
+
+  @media (max-width: 768px) {
+    @include e(search) {
+      display: none;
     }
   }
 }
