--- a/fe/components/post/styles/nav.scss
+++ b/fe/components/post/styles/nav.scss
@@ -8,13 +8,21 @@
   color: #71777c;
   
   @include e(menu) {
-    height: px2rem(45);  
     display: flex;
   }
 
   @include e(menu-item) {
     position: relative;
-    padding: 0 1rem;
+    padding: .5rem 1rem;
+    border-radius: 4px;
+    border: 1px solid #dcdcdc;
+    background: #f7f7f7;
+    margin-left: 1.3rem;
+
+    &:first-of-type {
+      margin-left: 0;
+    }
+
     @include flexLayout(center) {
       align-items: center;
     };
