--- a/fe/components/post/styles/article-list.scss
+++ b/fe/components/post/styles/article-list.scss
@@ -5,11 +5,10 @@
   list-style: none;
   padding: 1.5rem 0;
   border-top: 1px solid #f0f0f0;
-  border-bottom: 1px solid #f0f0f0;
-
-  // &:last-of-type {
-  //   border-bottom: 0;
-  // }
+  
+  &:last-of-type {
+    border-bottom: 1px solid #f0f0f0;
+  }
 
   @include e(cover) {
     position: absolute;
