--- a/fe/components/common/styles/header.scss
+++ b/fe/components/common/styles/header.scss
@@ -2,7 +2,7 @@
 
 @include b(header) {
   position: relative;
-  height: 5rem;
+  height: 50px;
   font-size: px2rem(16);
 
   > header {
@@ -12,7 +12,7 @@
     right: 0;
     z-index: 250;
     transition: all .2s;
-    height: 5rem;
+    height: 50px;
     color: #909090;
     border-bottom: 1px solid #e7e7e7;
     background: #fff;
@@ -42,7 +42,7 @@
   }
 
   @include e(menu-item) {
-    height: 5rem;
+    height: 50px;
     cursor: pointer;
   
     display: inline-flex;
@@ -56,7 +56,7 @@
       display: block;
       padding: 0 20px;
       height: 100%;
-      line-height: 5rem;
+      line-height: 50px;
     }
   }
 
