--- a/fe/components/post/styles/article-list.scss
+++ b/fe/components/post/styles/article-list.scss
@@ -3,11 +3,13 @@
 @include b(article-list) {
   position: relative;
   list-style: none;
+  width: 96%;
+  margin: 0 auto;
   padding: 1.5rem 0;
-  border-top: 1px solid #f0f0f0;
+  border-bottom: 1px solid #f0f0f0;
   
   &:last-of-type {
-    border-bottom: 1px solid #f0f0f0;
+    border-bottom: 0;
   }
 
   @include e(cover) {
