--- a/fe/theme/markdown.scss
+++ b/fe/theme/markdown.scss
@@ -13,6 +13,7 @@
     font-size: 16px;
     line-height: 1.5;
     word-wrap: break-word;
+    margin-bottom: 1rem;
   }
   
   .markdown-body .pl-c {
