--- a/fe/theme/global.scss
+++ b/fe/theme/global.scss
@@ -1,10 +1,6 @@
 @import 'normalize.scss';
-@import './common/index.scss';
-@import './mixin/index.scss';
-
-@import './component/button.scss';
-@import './component/input.scss';
-@import './component/tag.scss';
+@import 'markdown.scss';
+@import 'nprogress.scss';
 
 :global {
   *, *:hover {
@@ -13,6 +9,23 @@
 
   html {
     font-size: 12px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    background: rgba(0,0,0,0.2);
+  }
+
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    border-radius: 0;
+    background: rgba(0,0,0,0.1);
   }
 
   .container {
@@ -33,60 +46,26 @@
     }
   }
   
-
   .form-control {
     display: inline-block;
   }
 
-  .react-tabs__tab-list {
-    border-bottom: 1px solid #f0f0f0;
-    margin: 0 0 10px;
-    padding: 0;
-    font-size: 14px;
-    font-weight: 600;
-    color: #969696
-  }
-
-  .react-tabs__tab-list i {
-    margin-right: 5px;
-  }
-  
-  .react-tabs__tab {
+  input {
     display: inline-block;
-    border: 1px solid transparent;
-    border-bottom: none;
-    bottom: -1px;
-    position: relative;
-    list-style: none;
-    padding: 6px 12px;
-    cursor: pointer;
-  }
-  
-  .react-tabs__tab--selected {
-    color: #646464;
-    border-bottom: 2px solid #646464;
-  }
-  
-  .react-tabs__tab--disabled {
-    color: GrayText;
-    cursor: default;
-  }
-  
-  .react-tabs__tab:focus:after {
-    content: "";
-    position: absolute;
-    height: 5px;
-    left: -4px;
-    right: -4px;
-    bottom: -5px;
-    background: #fff;
-  }
-  
-  .react-tabs__tab-panel {
-    display: none;
-  }
-  
-  .react-tabs__tab-panel--selected {
-    display: block;
+    box-sizing: border-box;
+    padding: .4rem .9rem;
+    font-size: inherit;
+    line-height: 1;
+    background-image: none;
+    background-color: #fff;
+    border-radius: 4px;
+    border: 1px solid #eee;
+    outline: none;
+    transition: border-color .2s cubic-bezier(.645,.045, .355, 1);
+
+    &:focus,
+    &:active {
+      border-color: #78dcfd;
+    }
   }
 }
