--- a/be/src/views/dashboard/style.scss
+++ b/be/src/views/dashboard/style.scss
@@ -171,6 +171,7 @@
       box-sizing: border-box;
       padding: 15px;
       height: 344px;
+      overflow: auto;
 
       /deep/ .ta-collapse__body {
         background: #f1f2f6;
