FE: update style

--- a/fe/theme/global.scss
+++ b/fe/theme/global.scss
@@ -3,9 +3,9 @@
 @import 'nprogress.scss';
 
 :global {
-  *, *:hover {
-    transition: all ease  .3s;
-  }
+  // *, *:hover {
+  //   transition: all ease  .3s;
+  // }
 
   html {
     font-size: 12px;
