--- a/fe/theme/markdown.scss
+++ b/fe/theme/markdown.scss
@@ -260,6 +260,7 @@
   .markdown-body h6 {
     margin-top: 0;
     margin-bottom: 0;
+    font-weight: 500 !important;
   }
   
   .markdown-body h1 {
