--- a/fe/theme/global.scss
+++ b/fe/theme/global.scss
@@ -11,6 +11,10 @@
     font-size: 12px;
   }
 
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  }
+
   ::-webkit-scrollbar {
     width: 6px;
     height: 6px;
@@ -58,7 +62,6 @@
     line-height: 1;
     background-image: none;
     background-color: #fff;
-    border-radius: 4px;
     border: 1px solid #eee;
     outline: none;
     transition: border-color .2s cubic-bezier(.645,.045, .355, 1);
