--- a/fe/theme/markdown.scss
+++ b/fe/theme/markdown.scss
@@ -99,7 +99,7 @@
     code,
     pre {
       font-family: "Roboto Mono", Monaco, courier, monospace;
-      font-size: 1em;
+      font-size: .9em;
       background-color: #f8f8f8;
       -webkit-font-smoothing: initial;
       -moz-osx-font-smoothing: initial;
@@ -298,7 +298,7 @@
     pre {
       position: relative;
       font-family: "Roboto Mono", Monaco, courier, monospace;
-      font-size: 1em;
+      font-size: .9em;
       background-color: #f8f8f8;
       -webkit-font-smoothing: initial;
       padding: 1.2em 1.4em;
