update BE FE Server

--- a/fe/theme/markdown.scss
+++ b/fe/theme/markdown.scss
@@ -222,13 +222,13 @@
       visibility: hidden;
     }
     h2 {
-      margin: 45px 0 0.8em;
+      margin: 0 0 0.8em;
       padding-bottom: 0.7em;
       border-bottom: 1px solid #ddd;
     }
     h3 {
-      margin: 52px 0 1.2em;
-      line-height: 1.2;
+      margin: 0 0 1.2em;
+      line-height: 1.5;
       position: relative;
     }
     h3 > a:before {
@@ -259,12 +259,23 @@
       padding-left: 1.5em;
       position: inherit;
     }
-    a {
+
+    a.anchor {
+      display: block;
+      position: relative;
+      visibility: hidden;
+      height: 1.5em;
+    }
+
+    p a {
       color: #42b983;
-      font-weight: 600;
+      font-weight: 500;
     }
     
-    
+    blockquote {
+      margin: 0;
+    }
+
     blockquote p {
       padding: 12px 24px 12px 30px;
       margin: 2em 0;
@@ -396,29 +407,4 @@
       content: "CSS";
     }
   }
-    // code,
-    // pre {
-    //   font-family: "Roboto Mono", Monaco, courier, monospace;
-    //   font-size: 0.8em;
-    //   background-color: #f8f8f8 !important;
-    //   -webkit-font-smoothing: initial;
-    //   -moz-osx-font-smoothing: initial;
-  
-    //   &::-webkit-scrollbar {
-    //     width: 4px;
-    //     height: 4px;
-    //   }
-    
-    //   &::-webkit-scrollbar-thumb {
-    //     border-radius: 5px;
-    //     -webkit-box-shadow: inset 0 0 5px rgba(248,248,248,.5);
-    //     background: rgba(0,0,0,0.2);
-    //   }
-    
-    //   &::-webkit-scrollbar-track {
-    //     -webkit-box-shadow: inset 0 0 5px rgba(248,248,248,.5);
-    //     border-radius: 0;
-    //     background: #f8f8f8;
-    //   }
-    // }
 }
