--- a/fe/theme/global.scss
+++ b/fe/theme/global.scss
@@ -8,7 +8,8 @@
   }
 
   body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
+      'Droid Sans', 'Helvetica Neue', sans-serif;
   }
 
   ::-webkit-scrollbar {
@@ -18,14 +19,14 @@
 
   ::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
-    background: rgba(0,0,0,0.2);
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
   }
 
   ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 5px rgba(255,255,255,1);
+    -webkit-box-shadow: inset 0 0 5px rgba(255, 255, 255, 1);
     border-radius: 0;
-    background: rgba(255,255,255,1);
+    background: rgba(255, 255, 255, 1);
   }
 
   .container {
@@ -45,7 +46,7 @@
       width: 960px;
     }
   }
-  
+
   .form-control {
     display: inline-block;
   }
@@ -53,13 +54,13 @@
   input {
     display: inline-block;
     box-sizing: border-box;
-    padding: .4rem .9rem;
+    padding: 0.4rem 0.9rem;
     font-size: inherit;
     line-height: 1;
     background-image: none;
     background-color: #fff;
     border: 1px solid #eee;
     outline: none;
-    transition: border-color .2s cubic-bezier(.645,.045, .355, 1);
+    transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
   }
 }
