--- a/fe/theme/pages/post.scss
+++ b/fe/theme/pages/post.scss
@@ -1,7 +1,7 @@
 .container.page {
   position: relative;
   margin: 20px auto;
-  padding-right: 22rem;
+  // padding-right: 22rem;
   padding-bottom: 3rem;
 }
 
@@ -22,6 +22,38 @@
 .articles {
   box-sizing: border-box;
   background: #fff;
+}
+
+.articles-meta {
+  position: relative;
+  padding: 2rem 0;
+  color: #fff;
+  background-image: url(https://assets-cdn.shimo.im/assets/images/home/index/pic05-c39de888ff.jpg);
+  background-size: cover;
+  background-position: center;
+
+  .cover {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .cover {
+    background: rgba(0, 0, 0, 0.5);
+  }
+
+  .container {
+    position: relative;
+    z-index: 1;
+  }
+
+  @media (max-width: 768px) {
+    .container {
+      padding: 0 15px;
+    }
+  }
 }
 
 aside {
@@ -66,7 +98,7 @@ aside > div.is-fix {
 
   .m-fbtn {
     display: block;
-    transition: all ease  .3s;
+    transition: all ease 0.3s;
   }
 
   aside {
@@ -79,7 +111,7 @@ aside > div.is-fix {
 
     width: 100vw;
     height: 0;
-    transition: all ease  .3s;
+    transition: all ease 0.3s;
   }
 
   aside.is-active {
