fe: 改变布局样式&新增rss, sitemap

--- a/fe/theme/global.scss
+++ b/fe/theme/global.scss
@@ -58,7 +58,7 @@
     font-size: inherit;
     line-height: 1;
     background-image: none;
-    background-color: #fff;
+    background-color: transparent;
     border: 1px solid #eee;
     outline: none;
     transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
